--- a/respaldo-01-04-2021/about-us.html
+++ b/respaldo-01-04-2021/about-us.html
@@ -54,13 +54,21 @@
                 <div class="orange-block"></div>
                 <div class="col-4 m-3 p-3  white-border">
                     <h1 class="title1">Problema</h1>
-                    <p class="mt-3 white">A mediados del mes de diciembre de 2019 desde la ciudad de Wuhan, en China, el mundo recibió una noticia devastadora cuando se dio a conocer un nuevo virus que crearía una crisis mundial y cambiaría la forma en la que nos comportamos para siempre.</p>
-                    <p class="white">La situación de salud que generó el coronavirus trajo consigo una necesidad de aislamiento preventivo, lo que significó que las familias ahora estaban confinadas a pasar todo su tiempo sin salir de casa. Con lo que se le presentó un nuevo problema a la humanidad además de las cuestiones básicas de salud y supervivencia: ¿cómo pasar el tiempo? ¿Cómo mantener el cerebro ocupado para prevenir brotes de depresión y ansiedad?</p>
+                    <p class="mt-3 white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis pariatur
+                        cupiditate magni assumenda aperiam iusto molestias ipsa, officiis dolorem modi omnis aut
+                        deleniti, exercitationem deserunt ex minus id nihil animi.</p>
+                    <p class="white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis pariatur cupiditate magni
+                        assumenda aperiam iusto molestias ipsa, officiis dolorem modi omnis aut deleniti, exercitationem
+                        deserunt ex minus id nihil animi.</p>
                 </div>
                 <div class="col-4 m-3 p-3">
                     <h1 class="title1">Necesidad</h1>
-                    <p class="mt-3 white">La necesidad de entretenimiento saludable se convirtió en una prioridad, sobre todo dado la nueva importancia que se le presta a la salud mental en la actualidad. En estos momentos de encierro y preocupación, actividades para pasar el tiempo se han convertido en necesidad básica, pero es difícil encontrar estas que sean variadas y que mantengan entretenida a toda la familia.</p>
-                    <p class="white">Jugar es una práctica necesaria para el ser humano, es algo que se identificó desde 1938, cuando Johan Huizinga publicó el libro Homo Ludens. Por lo que se puede concluir que una de las necesidades humanas, especialmente cuando el cerebro no recibe otros estimulos a los que está acostumbrado, es la de jugar.</p>
+                    <p class="mt-3 white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis pariatur
+                        cupiditate magni assumenda aperiam iusto molestias ipsa, officiis dolorem modi omnis aut
+                        deleniti, exercitationem deserunt ex minus id nihil animi.</p>
+                    <p class="white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis pariatur cupiditate magni
+                        assumenda aperiam iusto molestias ipsa, officiis dolorem modi omnis aut deleniti, exercitationem
+                        deserunt ex minus id nihil animi.</p>
                 </div>
             </div>
         </div>
@@ -69,17 +77,17 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-8 ">
                     <h1 class="title2 text-center">Solución</h1>
-                    <p class="text-center">La perfecta solución a este problema consiste en crear un juego virtual en el que pueda participar toda la familia, que sea estimulante para el cerebro y que sea divertido. De esta manera, las personas podrían combatir el sopor de la quietud generado por el encierro.</p>
-                    <p class="text-center">Haciendo uso de este tipo de juegos, además de buenos hábitos alimenticios, de sueño y terapia ocupacional, las personas podrían mantener una mejor salud mental.</p>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad commodi mollitia nemo. Maxime quibusdam neque ex unde cumque, magnam qui, eligendi voluptatem voluptas, quidem beatae illo dolor temporibus omnis inventore?</p>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad commodi mollitia nemo. Maxime quibusdam neque ex unde cumque, magnam qui, eligendi voluptatem voluptas, quidem beatae illo dolor temporibus omnis inventore?</p>
                 </div>
             </div>
         </div>
 
         <div class="img1 d-flex align-items-center" id="beneficios">
-            <div class="row d-flex justify-content-end p-5">
-                <div class="col-5">
+            <div class="row d-flex justify-content-end">
+                <div class="col-5 mr-4">
                     <h1 class="title1">Beneficios</h1>
-                    <p class="mt-4">Los juegos proveen entretenimiento, socialización, sentido del logro y la posibilidad de explorar la identidad propia. Aportan cada vez más valor al usuario y por eso no es extraño que la gente juegue más. (El espectador, 2017)</p>
+                    <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis aspernatur quasi excepturi, accusamus aperiam illum ipsam sed ducimus quam nulla blanditiis voluptatum iste animi fuga voluptas nesciunt delectus ullam eum?</p>
                 </div>
             </div>
         </div>
@@ -92,7 +100,7 @@
             <div class="row d-flex justify-content-start ml-5">
                 <div class="col-5 ml-5">
                     <h1 class="title1">Beneficios</h1>
-                    <p class="mt-4">Jugar, divertirse y disfrutar de actividades lúdicas y recreativas es un derecho fundamental de niños y niñas. Así se reconoció en la Declaración de los Derechos del Niño en el año 1959.</p>
+                    <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis aspernatur quasi excepturi, accusamus aperiam illum ipsam sed ducimus quam nulla blanditiis voluptatum iste animi fuga voluptas nesciunt delectus ullam eum?</p>
                 </div>
             </div>
         </div>
